@@ -37,28 +37,17 @@ compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
 
-applicationDefaultJvmArgs = [
-        "--add-modules javafx.controls,javafx.fxml",
-        "--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED",
-        "--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED"
-]
-
 application{
-    mainClassName = "com.example.demo.app.MainKt"
+    mainClassName = "com.example.demo.app.MyApp"
+    applicationDefaultJvmArgs = [
+            "--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED",
+            "--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED"
+    ]
 }
 
 javafx {
     version = "14"
     modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.base', 'javafx.media']
-    configuration = "compileOnly"
-}
-
-jlink {
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-    launcher{
-        name = 'jfk keys'
-        jvmArgs = ['-Dlog4j.configurationFile=./log4j2.xml']
-    }
 }
 
 repositories {
@@ -92,7 +81,7 @@ dependencies {
     testRuntime "org.junit.jupiter:junit-jupiter-engine:$junit_version"
 }
 
-mainClassName = "com.example.demo.app.MainKt"
+mainClassName = "com.example.demo.app.MyApp"
 
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
@@ -115,19 +104,3 @@ jar {
     }
 }
 
-task fatJar(type: Jar) {
-    manifest {
-        attributes 'Main-Class': mainClassName
-    }
-    archiveClassifier = "all"
-    from {
-        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
-    }
-    with jar
-}
-
-launch4j {
-    mainClassName = "com.example.demo.app.MainKt"
-//    icon = "${projectDir}/icons/myApp.ico"
-}
